--- a/portfolio.html
+++ b/portfolio.html
@@ -12,23 +12,23 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="container thumb">
+  <header class="page-header">
+    <div class="container page-header__container">
       <nav class="menu">
-        <a class="menu__logo logo" href="./index.html" target="_blank" rel="noreferrer noopener">Web<span
-            class="logo__dark">Studio</span></a>
+        <a class="logo menu__logo" href="./index.html" target="_blank" rel="noreferrer noopener">Web<span
+            class="logo__text">Studio</span></a>
         <ul class="navigation">
           <li class="navigation__item"><a class="navigation__link link" href="./index.html">Студия</a></li>
-          <li class="navigation__item"><a class="navigation__link link navigation__link--current"
+          <li class="navigation__item"><a class="navigation__link link navigation__link--active"
               href="./portfolio.html">Портфолио</a>
           </li>
           <li class="navigation__item"><a class="navigation__link link" href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="contacts">
+      <ul class="contacts page-header__contacts">
         <li class="contacts__item">
           <a class="contacts__link link" href="mailto:info@devstudio.com">
-            <svg class="contacts__icon" width="16" height="12">
+            <svg class="contacts__icon contacts__icon--left" width="16" height="12">
               <use href="./images/icons.svg#icon-mail"></use>
             </svg>
             info@devstudio.com
@@ -36,7 +36,7 @@
         </li>
         <li class="contacts__item">
           <a class="contacts__link link" href="tel:+380961111111">
-            <svg class="contacts__icon" width="10" height="16">
+            <svg class="contacts__icon contacts__icon--left" width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11
@@ -48,7 +48,7 @@
     <section class="section">
       <div class="container">
         <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="filter">
+        <ul class="filter section__filter">
           <li class="filter__item"><button class="filter__btn" type="button">Все</button></li>
           <li class="filter__item"><button class="filter__btn" type="button">Веб-сайты</button></li>
           <li class="filter__item"><button class="filter__btn" type="button">Приложения</button></li>
@@ -213,11 +213,11 @@
       </div>
     </section>
   </main>
-  <footer class="footer">
-    <div class="container footer__thumb">
-      <div class="footer__box">
-        <a class="footer__logo logo" href="#" target="_blank" rel="noreferrer noopener">Web<span
-            class="logo__light">Studio</span></a>
+  <footer class="page-footer">
+    <div class="container page-footer__container">
+      <div class="page-footer__box">
+        <a class="page-footer__logo logo" href="#" target="_blank" rel="noreferrer noopener">Web<span
+            class="logo__text logo__text--light">Studio</span></a>
         <address class="address">
           <ul class="address__list">
             <li class="address__item"><a class="address__map" href="https://goo.gl/maps/3mmmgACdLDucJXHp8"
@@ -228,33 +228,37 @@
           </ul>
         </address>
       </div>
-      <!----------------------------------social-links--------------------------->
-      <div class="footer__box">
-        <p class="footer__text">присоединяйтесь</p>
+      <!----------------------------------social-links---------------------------->
+      <div class="page-footer__box">
+        <p class="page-footer__text">присоединяйтесь</p>
         <ul class="social social--position">
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener">
+            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+              aria-label="instagram">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener">
+            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+              aria-label="twitter">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener">
+            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+              aria-label="facebook">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener">
+            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+              aria-label="linkedin">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
@@ -263,8 +267,8 @@
         </ul>
       </div>
       <!----------------------------------subscribe---------------------------->
-      <div class="footer__box">
-        <p class="footer__text">Подпишитесь на рассылку</p>
+      <div class="page-footer__box">
+        <p class="page-footer__text">Подпишитесь на рассылку</p>
         <form class="subscribe">
           <input class="subscribe__input" type="email" name="email" placeholder="E-mail">
           <button class="subscribe__btn button" type="submit">
@@ -277,6 +281,7 @@
       </div>
     </div>
   </footer>
+
 </body>
 
 </html>
