+some scss section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
@@ -110,7 +110,7 @@
 
     <section class="section section--no-padding">
       <div class="container">
-        <h2 class="title section__title">Чем мы занимаемся</h2>
+        <h2 class="section__title section__title--bottom-indent">Чем мы занимаемся</h2>
         <ul class="works">
           <li class="works__item">
             <img class="works__img" src="./images/what-we-do/what-we-do-1.jpg" alt=" пишет код на клавиатуре"
@@ -141,7 +141,7 @@
 
     <section class="section section--dark-bg">
       <div class="container">
-        <h2 class="title section__title">Наша команда</h2>
+        <h2 class="section__title section__title--bottom-indent">Наша команда</h2>
         <ul class="team">
           <li class="team__item">
             <img class="team__img" src="./images/team/team-1.jpg" alt="член команды мужчина" width="270" height="260">
@@ -299,7 +299,7 @@
 
     <section class="section">
       <div class="container">
-        <h2 class="title section__title">Постоянные клиенты</h2>
+        <h2 class="section__title section__title--bottom-indent">Постоянные клиенты</h2>
         <ul class="clients">
           <li class="clients__item">
             <a class="clients__link" href="#0" target="_blank" rel="noreferrer noopener">
