--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
       <!----------------------------------social-links---------------------------->
       <div class="page-footer__box">
         <p class="page-footer__text">присоединяйтесь</p>
-        <ul class="social social--position">
+        <ul class="social social--no-indent">
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+            <a class="social__link social__link--dark-bg" href="#0" target="_blank" rel="noreferrer noopener"
               aria-label="instagram">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-instagram"></use>
@@ -378,7 +378,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+            <a class="social__link social__link--dark-bg" href="#0" target="_blank" rel="noreferrer noopener"
               aria-label="twitter">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter"></use>
@@ -386,7 +386,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+            <a class="social__link social__link--dark-bg" href="#0" target="_blank" rel="noreferrer noopener"
               aria-label="facebook">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook"></use>
@@ -394,7 +394,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+            <a class="social__link social__link--dark-bg" href="#0" target="_blank" rel="noreferrer noopener"
               aria-label="linkedin">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
@@ -410,7 +410,7 @@
           <input class="subscribe__input" type="email" name="email" placeholder="E-mail">
           <button class="subscribe__btn button" type="submit">
             Подписаться
-            <svg class="button__icon" width="24" height="24">
+            <svg class="button__icon button__icon--right" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
           </button>
