--- a/portfolio.html
+++ b/portfolio.html
@@ -231,9 +231,9 @@
       <!----------------------------------social-links---------------------------->
       <div class="page-footer__box">
         <p class="page-footer__text">присоединяйтесь</p>
-        <ul class="social social--position">
+        <ul class="social social--no-indent">
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+            <a class="social__link social__link--dark-bg" href="#0" target="_blank" rel="noreferrer noopener"
               aria-label="instagram">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-instagram"></use>
@@ -241,7 +241,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+            <a class="social__link social__link--dark-bg" href="#0" target="_blank" rel="noreferrer noopener"
               aria-label="twitter">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-twitter"></use>
@@ -249,7 +249,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+            <a class="social__link social__link--dark-bg" href="#0" target="_blank" rel="noreferrer noopener"
               aria-label="facebook">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-facebook"></use>
@@ -257,7 +257,7 @@
             </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--style" href="#0" target="_blank" rel="noreferrer noopener"
+            <a class="social__link social__link--dark-bg" href="#0" target="_blank" rel="noreferrer noopener"
               aria-label="linkedin">
               <svg class="social__icon" width="20" height="20">
                 <use href="./images/icons.svg#icon-linkedin"></use>
@@ -273,7 +273,7 @@
           <input class="subscribe__input" type="email" name="email" placeholder="E-mail">
           <button class="subscribe__btn button" type="submit">
             Подписаться
-            <svg class="button__icon" width="24" height="24">
+            <svg class="button__icon button__icon--right" width="24" height="24">
               <use href="./images/icons.svg#icon-send"></use>
             </svg>
           </button>
