--- a/portfolio.html
+++ b/portfolio.html
@@ -18,25 +18,25 @@
         <a class="logo menu__logo" href="./index.html" target="_blank" rel="noreferrer noopener">Web<span
             class="logo__text">Studio</span></a>
         <ul class="navigation">
-          <li class="navigation__item"><a class="navigation__link link" href="./index.html">Студия</a></li>
-          <li class="navigation__item"><a class="navigation__link link navigation__link--active"
+          <li class="navigation__item"><a class="navigation__link" href="./index.html">Студия</a></li>
+          <li class="navigation__item"><a class="navigation__link navigation__link--active"
               href="./portfolio.html">Портфолио</a>
           </li>
-          <li class="navigation__item"><a class="navigation__link link" href="#">Контакты</a></li>
+          <li class="navigation__item"><a class="navigation__link" href="#">Контакты</a></li>
         </ul>
       </nav>
       <ul class="contacts page-header__contacts">
         <li class="contacts__item">
-          <a class="contacts__link link" href="mailto:info@devstudio.com">
-            <svg class="contacts__icon contacts__icon--left" width="16" height="12">
+          <a class="contacts__link" href="mailto:info@devstudio.com">
+            <svg class="contacts__icon" width="16" height="12">
               <use href="./images/icons.svg#icon-mail"></use>
             </svg>
             info@devstudio.com
           </a>
         </li>
         <li class="contacts__item">
-          <a class="contacts__link link" href="tel:+380961111111">
-            <svg class="contacts__icon contacts__icon--left" width="10" height="16">
+          <a class="contacts__link" href="tel:+380961111111">
+            <svg class="contacts__icon" width="10" height="16">
               <use href="./images/icons.svg#icon-smartphone"></use>
             </svg>
             +38 096 111 11 11
@@ -222,9 +222,9 @@
           <ul class="address__list">
             <li class="address__item"><a class="address__map" href="https://goo.gl/maps/3mmmgACdLDucJXHp8"
                 target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="address__item"><a class="address__link link" href="mailto:info@example.com">info@example.com</a>
+            <li class="address__item"><a class="address__link" href="mailto:info@example.com">info@example.com</a>
             </li>
-            <li class="address__item"><a class="address__link link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            <li class="address__item"><a class="address__link" href="tel:+380991111111">+38 099 111 11 11</a></li>
           </ul>
         </address>
       </div>
