--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,7 @@
           <li class="portfolio__item">
             <a class="portfolio__link" href="#0">
               <div class="portfolio__thumb">
-                <img class="portfolio__img" src="./images/portfolio-image/portfolio-1.jpg" alt="веб сайт технокряк"
-                  width="370" height="294">
+                <img src="./images/portfolio-image/portfolio-1.jpg" alt="веб сайт технокряк" width="370" height="294">
                 <div class="portfolio__overlay">
                   <p class="portfolio__description">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -93,8 +92,7 @@
           <li class="portfolio__item">
             <a class="portfolio__link" href="#0">
               <div class="portfolio__thumb">
-                <img class="portfolio__img" src="./images/portfolio-image/portfolio-3.jpg" alt="лого ресторана"
-                  width="370" height="294">
+                <img src="./images/portfolio-image/portfolio-3.jpg" alt="лого ресторана" width="370" height="294">
                 <div class="portfolio__overlay">
                   <p class="portfolio__description">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -110,8 +108,8 @@
           <li class="portfolio__item">
             <a class="portfolio__link" href="#0">
               <div class="portfolio__thumb">
-                <img class="portfolio__img" src="./images/portfolio-image/portfolio-4.jpg"
-                  alt="наушники полноразмерные черные" class="portfolio__img" width="370" height="294">
+                <img src="./images/portfolio-image/portfolio-4.jpg" alt="наушники полноразмерные черные" width="370"
+                  height="294">
                 <div class="portfolio__overlay">
                   <p class="portfolio__description">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -127,8 +125,7 @@
           <li class="portfolio__item">
             <a class="portfolio__link" href="#0">
               <div class="portfolio__thumb">
-                <img class="portfolio__img" src="./images/portfolio-image/portfolio-5.jpg" alt="две коробки" width="370"
-                  height="294">
+                <img src="./images/portfolio-image/portfolio-5.jpg" alt="две коробки" width="370" height="294">
                 <div class="portfolio__overlay">
                   <p class="portfolio__description">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -144,8 +141,7 @@
           <li class="portfolio__item">
             <a class="portfolio__link" href="#0">
               <div class="portfolio__thumb">
-                <img class="portfolio__img" src="./images/portfolio-image/portfolio-6.jpg" alt="монитор" width="370"
-                  height="294">
+                <img src="./images/portfolio-image/portfolio-6.jpg" alt="монитор" width="370" height="294">
                 <div class="portfolio__overlay">
                   <p class="portfolio__description">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -161,8 +157,7 @@
           <li class="portfolio__item">
             <a class="portfolio__link" href="#0">
               <div class="portfolio__thumb">
-                <img class="portfolio__img" src="./images/portfolio-image/portfolio-7.jpg" alt="открытый журнал"
-                  width="370" height="294">
+                <img src="./images/portfolio-image/portfolio-7.jpg" alt="открытый журнал" width="370" height="294">
                 <div class="portfolio__overlay">
                   <p class="portfolio__description">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -178,8 +173,7 @@
           <li class="portfolio__item">
             <a class="portfolio__link" href="#0">
               <div class="portfolio__thumb">
-                <img class="portfolio__img" src="./images/portfolio-image/portfolio-8.jpg" alt="белая бирка" width="370"
-                  height="294">
+                <img src="./images/portfolio-image/portfolio-8.jpg" alt="белая бирка" width="370" height="294">
                 <div class="portfolio__overlay">
                   <p class="portfolio__description">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
@@ -195,8 +189,7 @@
           <li class="portfolio__item">
             <a class="portfolio__link" href="#0">
               <div class="portfolio__thumb">
-                <img class="portfolio__img" src="./images/portfolio-image/portfolio-9.jpg" alt="печатает на нетбуке"
-                  width="370" height="294">
+                <img src="./images/portfolio-image/portfolio-9.jpg" alt="печатает на нетбуке" width="370" height="294">
                 <div class="portfolio__overlay">
                   <p class="portfolio__description">Технокряк это современная площадка распространения коронавируса.
                     Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
