--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="hero">
       <div class="container hero__container">
         <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
-        <button class="button hero__btn" data-modal-open type="button">Заказать услугу</button>
+        <button class="button" data-modal-open type="button">Заказать услугу</button>
       </div>
     </section>
 
