--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <section class="section section--no-padding">
       <div class="container">
-        <h2 class="section__title section__title--bottom-indent">Чем мы занимаемся</h2>
+        <h2 class="section__title section__title--bottom-indent" hidden>Чем мы занимаемся</h2>
         <ul class="works">
           <li class="works__item">
             <img class="works__img" src="./images/what-we-do/what-we-do-1.jpg" alt=" пишет код на клавиатуре"
