--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul class="features">
           <li class="features__item">
             <div class="features__box">
-              <svg class="features__icon" width="70" height="70">
+              <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
@@ -73,7 +73,7 @@
           </li>
           <li class="features__item">
             <div class="features__box">
-              <svg class="features__icon" width="70" height="70">
+              <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
@@ -84,7 +84,7 @@
           </li>
           <li class="features__item">
             <div class="features__box">
-              <svg class="features__icon" width="70" height="70">
+              <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
@@ -95,7 +95,7 @@
           </li>
           <li class="features__item">
             <div class="features__box">
-              <svg class="features__icon" width="70" height="70">
+              <svg width="70" height="70">
                 <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
