--- a/index.html
+++ b/index.html
@@ -113,22 +113,19 @@
         <h2 class="section__title section__title--bottom-indent" hidden>Чем мы занимаемся</h2>
         <ul class="works">
           <li class="works__item">
-            <img class="works__img" src="./images/what-we-do/what-we-do-1.jpg" alt=" пишет код на клавиатуре"
-              width="370">
+            <img src="./images/what-we-do/what-we-do-1.jpg" alt=" пишет код на клавиатуре" width="370">
             <div class="works__box">
               <p class="works__label">Десктопные приложения</p>
             </div>
           </li>
           <li class="works__item">
-            <img class="works__img" src="./images/what-we-do/what-we-do-2.jpg" alt=" делает адаптацию под телефон"
-              width="370">
+            <img src="./images/what-we-do/what-we-do-2.jpg" alt=" делает адаптацию под телефон" width="370">
             <div class="works__box">
               <p class="works__label">Мобильные приложения</p>
             </div>
           </li>
           <li class="works__item">
-            <img class="works__img" src="./images/what-we-do/what-we-do-3.jpg" alt=" работает в редакторе цвета"
-              width="370">
+            <img src="./images/what-we-do/what-we-do-3.jpg" alt=" работает в редакторе цвета" width="370">
             <div class="works__box">
               <p class="works__label">Дизайнерские решения</p>
             </div>
@@ -144,7 +141,7 @@
         <h2 class="section__title section__title--bottom-indent">Наша команда</h2>
         <ul class="team">
           <li class="team__item">
-            <img class="team__img" src="./images/team/team-1.jpg" alt="член команды мужчина" width="270" height="260">
+            <img src="./images/team/team-1.jpg" alt="член команды мужчина" width="270" height="260">
             <div class="team__box">
               <h3 class="team__title">Игорь Демьяненко</h3>
               <p class="team__text" lang="en">Product Designer</p>
@@ -181,7 +178,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__img" src="./images/team/team-2.jpg" alt="член команды женщина" width="270" height="260">
+            <img src="./images/team/team-2.jpg" alt="член команды женщина" width="270" height="260">
             <div class="team__box">
               <h3 class="team__title">Ольга Репина</h3>
               <p class="team__text" lang="en">Frontend Developer</p>
@@ -218,7 +215,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__img" src="./images/team/team-3.jpg" alt="член команды мужчина" width="270" height="260">
+            <img src="./images/team/team-3.jpg" alt="член команды мужчина" width="270" height="260">
             <div class="team__box">
               <h3 class="team__title">Николай Тарасов</h3>
               <p class="team__text" lang="en">Marketing</p>
@@ -255,7 +252,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__img" src="./images/team/team-4.jpg" alt="член команды мужчина" width="270" height="260">
+            <img src="./images/team/team-4.jpg" alt="член команды мужчина" width="270" height="260">
             <div class="team__box">
               <h3 class="team__title">Михаил Ермаков</h3>
               <p class="team__text" lang="en">UI Designer</p>
